changed backround image and uncomment css

--- a/TurkeyMap/css/default.css
+++ b/TurkeyMap/css/default.css
@@ -198,7 +198,7 @@ svg > a {
 .city-image {
 	width:560px;
 	height:460px;
-	background:url(../images/ankara-bg.jpg) no-repeat;
+	/*background:url(../images/Antalya.png) no-repeat;*/
 }
 .city-title {
 	width: 85px;
